--- a/second.html
+++ b/second.html
@@ -39,7 +39,7 @@
         Certification from 2 Year Graphic Design Class<br><br>
         Certified in HTML and CSS (MTA 98-375 HTML5 App Development) from Microsoft<br>
         Certified in JavaScript (ITS (Information Technology Specialist) JavaScript (302)) from Certiport<br><br>
-        Freelance Amateur Digital Artist<br>
+        Freelance Self taught Digital/Traditional Artist<br>
         Freelance Graphic Designer
     </h2>
 </body>
