New success page and changes to third.html
Added a new page for when the form is submitted successfully and further improvements to third.html

--- a/third.html
+++ b/third.html
@@ -53,9 +53,12 @@
         <!-- Disable Captcha -->
          <input type="hidden" name="_captcha" value="false">
 
+        <!-- Success message link-->
+        <input type="hidden" name="_next" value="https://zonetown.github.io/ZoneTown-Portfolio-Website/success.html">
+
     <div>
         <label for="name">Your Name *</label>
-        <input type="text" id="name" name="name" placeholder="Full Name">
+        <input type="text" id="name" name="name" placeholder="Full&nbsp;Name">
     </div>
     <div>
         <label for="email">Your Email *</label>
@@ -63,7 +66,7 @@
     </div>
     <div>
         <label for="text">Reason for contact *</label>
-        <textarea id="textArea" placeholder="Hi Dale, I am you contacting for..." name="Reason for contacting"></textarea>
+        <textarea id="textArea" placeholder="Hi Dale, I am you contacting for..." name="Reason&nbsp;for&nbsp;contacting"></textarea>
     </div>
     <button type="submit">Submit</button>
     </form>
